--- a/stack.yaml
+++ b/stack.yaml
@@ -4,5 +4,6 @@ packages:
 - location:
     git: https://github.com/haskell-game/sdl2
     commit: bb2c4b6b52b48497f3271fc880dd1a0b11623ef7
-extra-deps: []
+extra-deps:
+- reactive-banana-0.8.1.2
 resolver: lts-3.2
