--- a/pong-frp.cabal
+++ b/pong-frp.cabal
@@ -7,10 +7,10 @@ license:             BSD3
 license-file:        LICENSE
 author:              Your name here
 maintainer:          your.address@example.com
--- copyright:           
+-- copyright:
 category:            Web
 build-type:          Simple
--- extra-source-files:  
+-- extra-source-files:
 cabal-version:       >=1.10
 
 library
@@ -25,6 +25,7 @@ executable pong-frp-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , pong-frp
+                     , reactive-banana
   default-language:    Haskell2010
 
 test-suite pong-frp-test
