--- a/pong-frp.cabal
+++ b/pong-frp.cabal
@@ -24,9 +24,15 @@ executable pong-frp-exe
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
+                     , break
+                     , data-default
                      , pong-frp
+                     , linear
+                     , random
                      , reactive-banana
-                     , reactive-banana-sdl
+                     , sdl2
+                     , stm
+                     , transformers
   default-language:    Haskell2010
 
 test-suite pong-frp-test
